降水量がmm/3hなのに間違えて記載していたものを修正。thanks Kawasaki.

--- a/work/welcome.ipynb
+++ b/work/welcome.ipynb
@@ -145,14 +145,14 @@
     "MEPSは地上データと大気のデータと分けて提供されています。それぞれのデータで格納されている変数も異なります。ここでは、我々の生活と直接関係のある、地上のデータの可視化を行いましょう。\n",
     "\n",
     "### 格納されている変数とその内容\n",
-    "よく聞く名前の変数が入っています。注意すべきなのは、降水量と直達短波放射以外は、瞬間の値が格納されていますが、降水量は前一時間からの積算量、直達短波放射は前3時間からの平均値が格納されています。そのため、最初のステップ（予測時間0時間）には、値が入っていません。\n",
+    "よく聞く名前の変数が入っています。注意すべきなのは、降水量と直達短波放射以外は、瞬間の値が格納されていますが、降水量は前3時間からの積算量、直達短波放射は前3時間からの平均値が格納されています。そのため、最初のステップ（予測時間0時間）には、値が入っていません。\n",
     "\n",
     "Name| Description| Units | Remarks\n",
     "---|---|---|---\n",
     "PRMSL| 地上気圧 | Pa |\n",
     "U10m| 10m風速（経度方向）| m/s|\n",
     "V10m| 10m風速（緯度方向）| m/s|\n",
-    "Prcp| 降水量| mm/h|\n",
+    "Prcp| 降水量| mm/3h| 前3時間降水量\n",
     "DSWRF| 下向短波放射フラックス| W/m^2 |Downward Short-Wave Radiation Fluxの単語の頭文字を取ったもので、日射量と同じです。\n",
     "\n",
     "参考：[GRIB2 - CODE TABLE 4.2 PARAMETER NUMBER BY PRODUCT DISCIPLINE AND PARAMETER CATEGORY](https://www.nco.ncep.noaa.gov/pmb/docs/grib2/grib2_doc/grib2_table4-2.shtml) GRIB2形式（変換前のファイル）の変数名のリスト。"
@@ -679,6 +679,8 @@
    ],
    "source": [
     "\"\"\"\n",
+    "**注意**こ のグラフの単位は間違っています。[mm/3h]か[mm]が正しいです。\n",
+    "\n",
     "前の図では日本がどこかわかりませんので、地図を描画してみます。\n",
     "cartopyを使って海岸線を描画します。\n",
     "データの抽出はselやiselを使って行います。Pandasで言う所のlocやilocです。\n",
@@ -736,6 +738,8 @@
    ],
    "source": [
     "\"\"\"\n",
+    "**注意**こ のグラフの単位は間違っています。[mm/3h]か[mm]が正しいです。\n",
+    "\n",
     "全てのメンバーを可視化します。\n",
     "皆ちょっとずつ出力が異なっていることがわかります。\n",
     "\"\"\"\n",
